# Lamella-Synth

./: .gitignore  CMakeLists.txt  README.md
resource/: editor.uidesc
source/: MidiHandler.h  cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
source/AdditiveSynth/: AdditiveOscillator.cpp  AdditiveOscillator.h
source/CustomUI/: PartialGraph.cpp  PartialGraph.h  TestSubController.h  UIFactory.cpp
source/Helpers/: AudioHelpers.cpp  AudioHelpers.h  DataExchangeInfo.h  Filters.h  OnePoleFilter.h
source/Instrument/: LamellaInstrument.h  LamellaVoice.h  ParamIDs.h.h  ParamRegistration.h
source/Partial/: ImpulseEnvelope.cpp  ImpulseEnvelope.h  Oscillator.h  Partial.h
source/Partial_Resonant/: Partial.h  Resonator.h
